# thermalCompute

computeParamter/: CMakeLists.txt  CMakeLists.txt~
computeParamter/include/: computeScale.hpp  computeShift.hpp
computeParamter/lib/: libpng16.so.16
computeParamter/lib/opencv/lib/: libopencv_core.so.2.4.9  libopencv_flann.so.2.4.9  libopencv_highgui.so.2.4.9  libopencv_imgproc.so.2.4  libopencv_ml.so.2.4.9  libopencv_nonfree.so.2.4  libopencv_objdetect.so.2.4.9  libopencv_ocl.so.2.4  libopencv_photo.so.2.4.9  libopencv_stitching.so.2.4.9  libopencv_superres.so.2.4.9  libopencv_video.so.2.4  libopencv_videostab.so.2.4.9
computeParamter/lib/opencv/lib/pkgconfig/: opencv.pc
computeParamter/src/: computeScale.cpp  computeShift.cpp
yuvBlend/: CMakeLists.txt  CMakeLists.txt~
yuvBlend/include/: blender_input.hpp  canny_edge_extractor.h  dog_edge_extractor.h  edge_enhancer.hpp  edge_extractor.h  edge_image_blender.h  edge_image_scale_blender.h  fuse_visual_thermalir.h  laplacian_edge_extractor.h  opencv_utilities.h  sobel_edge_extractor.h  utils.hpp  yuneec_cv_utilities.hpp
yuvBlend/src/: main.cpp
yuvBlend/src/src/: blender_input.cpp  canny_edge_extractor.cpp  dog_edge_extractor.cpp  edge_enhancer.cpp  edge_extractor.cpp  edge_image_blender.cpp  edge_image_scale_blender.cpp  fuse_visual_thermalir.cpp  laplacian_edge_extractor.cpp  sobel_edge_extractor.cpp  utils.cpp  yuneec_cv_demo.cpp  yuneec_cv_utilities.cpp
